<resources>
    <string name="app_name">LoginDesign1</string>
    <string name="login">Login</string>
    <string name="message">Follow your passions!</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="register">Do you want to join us?</string>
</resources>
